--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t imrankpathan/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run imrankpathan/react-test npm test -- --coverage
+  - docker run -e CI=true imrankpathan/react-test npm test -- --coverage
 
 after_success:
   - docker build -t imrankpathan/multi-container-client ./client
